--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             method="POST">
           <input type="text" name="name">
           <input type="email" name="_replyto">
+          <input type='text' name='message'>
           <input type="submit" value="Send">
       </form>
     </div>
