--- a/index.html
+++ b/index.html
@@ -86,6 +86,49 @@
           <div id="home" class="tab-pane fade in active">
             <h3>Menu 2</h3>
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+            <div class="row" style="padding-bottom:60px;">
+                <h3 class="text-center">Work Exp</h3>
+                <div class='col-sm-2'>
+                  <img src="pic/banner_300_job.svg" class='wow fadeIn' style="text-align: center; " >
+                </div>
+                <div class='col-sm-10'>
+                  
+                  <div class='col-sm-4' >
+                      <h5>Next Step(2016.7~~)<br>.</h5>
+                      <hr>
+                      <p><span style="font-weight:bold;">UI/GUI Designer</span><br></p>
+                      <ul>
+                        <li>Look for the next challenge</li>
+                      </ul>
+                  </div>
+                  <div class='col-sm-4 '>
+                      <h5>Patentcloud, Foxconn Groups (2013.07~2016.07)</h5>
+                      <hr>
+                      <p><span style="font-weight:bold;">UI/GUI Designer</span><br></p>
+                      <label>Responsible for </label>
+                      <ul>
+                        <li>Virtual Desktop System UI</li>
+                        <li>Data Share Product System UI</li>
+                        <li>Animation Design </li>
+                        <li>CIS Design</li>
+                        <li>Wireframe Design</li>
+                        <li>Web Design</li>
+                      </ul>
+                  </div>
+                  <div class='col-sm-4' >
+                      <h5>HON HAI Precision Ind.Co.,LTD /Foxconn(2012.12~2013.6)</h5>
+                      <hr>
+                      <p><span style="font-weight:bold;">UI/GUI Designer</span><br></p>
+                      <label>Responsible for </label>
+                      <ul>
+                        <li>Cloud Platform UI</li>
+                        <li>Web Design</li>
+                      </ul>
+                  </div>
+                  
+                </div>
+            </div><!--Education-->
+
             <div class="container row">
                 <h3 class='text-center'>Education</h3>
                 <hr>
@@ -193,33 +236,33 @@
                       <h5>Software</h5>
                       <hr>
                       <ul>
-                        <li>Photoshop</li>
-                        <li>Illustrator</li>
                         <li>After Effects</li>
-                        <li>Premiere</li>
+                        <li>Balsamiq Mockups</li>
                         <li>Cinema 4D</li>
+                        <li>Illustrator</li>
+                        <li>Photoshop</li>
+                        <li>Premiere</li>
                       </ul>
                   </div>
                   <div class='col-sm-4' >
                       <h5>Programing</h5>
                       <hr>
                       <ul>
-                        <li>HTML</li>
+                        <li>Bootstrap</li>
                         <li>CSS</li>
-                        <li>jQurey</li>
-                        <li>javascript</li>
-                        <li>SVG</li>
                         <li>Git</li>
+                        <li>HTML</li>
+                        <li>javascript</li>
+                        <li>jQurey</li>
+                        <li>SVG</li>
                       </ul>
                   </div>
                   <div class='col-sm-4' >
                       <h5>Others</h5>
                       <hr>
-                      <p><span style="font-weight:bold;">Dept. of Industrial & Commerical Design</span><br>
-                      National Taiwan University of Science and Tech.</p>
                       <ul>
-                        <li> 2004.09 ~  2008.07</li>
-                        <li>Major in Industrial Design</li>
+                        <li>Prototype</li>
+                        <li>Wireframe</li>
                       </ul>
                   </div>
                 </div>
@@ -244,7 +287,7 @@
               <div class="col-sm-2"   ><img src="pic/banner_300_mail.svg" class='wow fadeIn' ></div>
               <div class="col-sm-9">
                   <h3>Contact</h3>
-                  <form  class="form-horizontal text-left" role="contact" action="https://formspree.io/astrosage@gmail.com" method="POST">
+                  <form  class="form-horizontal text-left" role="contact" action="https://formspree.io/aaron.zl.hsu@gmail.com" method="POST">
                       <div class="form-group">
                         <label class="control-label col-sm-1 col-xs-1" for="Name"><img src="pic/icon/icon_16_name.png"></label>  
                         <div class="col-sm-11 col-xs-11">
