pc.jpg change name

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
             </div>
             <hr>
             <div class="row ">
-              <div class="col-sm-12"><p>Patentcloud </p><img src="pic/logo/pc.jpg" class="logo img-responsive wow fadeIn"></div>
+              <div class="col-sm-12"><p>Patentcloud </p><img src="pic/logo/pcd.jpg" class="logo img-responsive wow fadeIn"></div>
               <div class="col-sm-12"><p>Scienbizip</p><img src="pic/logo/sbp.jpg" class="logo img-responsive wow fadeIn"></div>
             </div>
 
