--- a/index.html
+++ b/index.html
@@ -486,8 +486,8 @@
               <div class="col-sm-12"><h3 style="text-align: center;">Music Player</h3><img src="pic/dailyui/daily04.jpg" class="logo img-responsive wow fadeIn"></div><br>
               <div class="col-sm-12"><h3 style="text-align: center;">Credit Card</h3><img src="pic/dailyui/daily05.jpg" class="logo img-responsive wow fadeIn"></div><br>
               <div class="col-sm-12"><h3 style="text-align: center;">404 page</h3><img src="pic/dailyui/daily06.jpg" class="logo img-responsive wow fadeIn"></div>
-              <div class="col-sm-12"><h3 style="text-align: center;">calculator<a href="iframe/calc.html" data-toggle="modal" data-target="#calculator">(HTML)</a></h3><img src="pic/dailyui/daily07.jpg" class="logo img-responsive wow fadeIn"></div>
-               <div class="col-sm-12"><h3 style="text-align: center;">Login<a href="iframe/login.html" data-toggle="modal" data-target="#login">(HTML)</a></h3><img src="pic/dailyui/daily08.jpg" class="logo img-responsive wow fadeIn"></div>
+              <div class="col-sm-12"><h3 style="text-align: center;">calculator<a  data-toggle="modal" data-target="#calculator">(HTML)</a></h3><img src="pic/dailyui/daily07.jpg" class="logo img-responsive wow fadeIn"></div>
+               <div class="col-sm-12"><h3 style="text-align: center;">Login<a  data-toggle="modal" data-target="#login">(HTML)</a></h3><img src="pic/dailyui/daily08.jpg" class="logo img-responsive wow fadeIn"></div>
               
             </div>
           </div>
