--- a/iframe/login.html
+++ b/iframe/login.html
@@ -11,7 +11,7 @@
   	<script type="text/javascript" src="typeahead.js"></script>
   	<script type="text/javascript" src="vimvault.js"></script>
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-  	<link rel="stylesheet" type="text/css" href="style.css" />
+  	<link rel="stylesheet" type="text/css" href="style2.css" />
 	<style type="text/css">
 		body{	
 			background:radial-gradient(lightgrey ,grey );
