--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
           </div>
           <div id="menu2" class="tab-pane fade">
             <h1>Daily UI</h1>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+            <hr>
             <div class="row ">
               <div class="col-sm-12"><h3 style="text-align: center;">calculator<a  data-toggle="modal" data-target="#calculator">(HTML)</a></h3><img src="pic/dailyui/daily07.jpg" class="logo img-responsive wow fadeIn"></div>
                <div class="col-sm-12"><h3 style="text-align: center;">Login<a  data-toggle="modal" data-target="#login">(HTML)</a></h3><img src="pic/dailyui/daily08.jpg" class="logo img-responsive wow fadeIn"></div>
@@ -494,24 +494,28 @@
             </div>
           </div>
           <!--=============Page03 begin====================-->
+          
           <div id="menu3" class="tab-pane fade wow fadeIn" style="padding-bottom:16px;">
+          <h1>SVG</h1>
+          <p>animation design</p>
+          <hr>
               <div class="row" >
-                <div class="col-sm-3"><img src="svg/svg01.svg" class="wow fadeIn logo img-responsive"></div>
-               <div class="col-sm-3"><img src="svg/svg07.svg" class="wow fadeIn logo img-responsive"></div>
-                <div class="col-sm-3"><img src="svg/svg03.svg" class="wow fadeIn logo img-responsive"></div>
-              <div class="col-sm-3"><img src="svg/svg04.svg" class="wow fadeIn logo img-responsive"></div>
+                <div class="col-sm-3"><img src="svg/svg01.svg" class="wow fadeIn svg img-responsive"></div>
+               <div class="col-sm-3"><img src="svg/svg07.svg" class="wow fadeIn svg img-responsive"></div>
+                <div class="col-sm-3"><img src="svg/svg03.svg" class="wow fadeIn svg img-responsive"></div>
+              <div class="col-sm-3"><img src="svg/svg04.svg" class="wow fadeIn svg img-responsive"></div>
             </div>
              <div class="row" >
-                <div class="col-sm-3"><img src="svg/svg05.svg" class="wow fadeIn logo img-responsive"></div>
-                <div class="col-sm-3"><img src="svg/svg13.svg" class="wow fadeIn logo img-responsive"></div>
-                <div class="col-sm-3"><img src="svg/svg08.svg" class="wow fadeIn logo img-responsive"></div>  
-                <div class="col-sm-3"><img src="svg/svg14.svg" class="wow fadeIn logo img-responsive"></div>
+                <div class="col-sm-3"><img src="svg/svg05.svg" class="wow fadeIn svg img-responsive"></div>
+                <div class="col-sm-3"><img src="svg/svg13.svg" class="wow fadeIn svg img-responsive"></div>
+                <div class="col-sm-3"><img src="svg/svg08.svg" class="wow fadeIn svg img-responsive"></div>  
+                <div class="col-sm-3"><img src="svg/svg14.svg" class="wow fadeIn svg img-responsive"></div>
             </div>
              <div class="row" >
-                <div class="col-sm-3"><img src="svg/svg09.svg" class="wow fadeIn logo img-responsive"></div>
-                <div class="col-sm-3"><img src="svg/svg10.svg" class="wow fadeIn logo img-responsive"></div>
-                <div class="col-sm-3"><img src="svg/svg11.svg" class="wow fadeIn logo img-responsive"></div>
-              <div class="col-sm-3"><img src="svg/svg12.svg" class="wow fadeIn logo img-responsive"></div>
+                <div class="col-sm-3"><img src="svg/svg09.svg" class="wow fadeIn svg img-responsive"></div>
+                <div class="col-sm-3"><img src="svg/svg10.svg" class="wow fadeIn svg img-responsive"></div>
+                <div class="col-sm-3"><img src="svg/svg11.svg" class="wow fadeIn svg img-responsive"></div>
+              <div class="col-sm-3"><img src="svg/svg12.svg" class="wow fadeIn svg img-responsive"></div>
             </div>
              
 
