--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <li id="menu01"><a data-toggle="tab" href="#menu1"><img src="pic/icon/icon_16_ui.png" class="menu-icon">Logo & CI</a></li>
         <li id="menu02"><a data-toggle="tab" href="#menu2"><img src="pic/icon/icon_16_id.png" class="menu-icon">Daily UI </a></li>
         <li id="menu03"><a data-toggle="tab" href="#menu3"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">SVG</a></li>
-        <li id="menu04"><a data-toggle="tab" href="#menu4"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">illustration</a></li>
+        <li id="menu04"><a data-toggle="tab" href="#menu4"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">Illustration</a></li>
     </ul>
     
 
