--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <META NAME="aaron" CONTENT="resume">
+  <meta name="description" content="Hsu Chih-Jung Portfolio">
+  <meta name="keywords" content="resume,portfolio,ui,user interface">
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="astrosage.github.io"/>
+  <meta property="og:site_name" content="aaron's resume"/>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css">
