--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
             <div class="row" style="padding-bottom:60px;">
                 <h3 class="text-center">Work Exp</h3>
                 <hr>
-                <div class='col-sm-2'>
-                  <img src="pic/banner_300_job.svg" class='wow fadeIn' style="text-align: center; " >
+                <div class='col-sm-2 '>
+                  <img src="pic/banner_300_job.svg" class='wow fadeIn img-responsive ' style="text-align: center; " >
                 </div>
-                <div class='col-sm-10'>
+                <div class='col-sm-10 '>
                   
                   <div class='col-sm-4' >
                       <h5>Next Step(2016.7~~)<br>.</h5>
@@ -486,6 +486,7 @@
             <h1>Daily UI</h1>
             <hr>
             <div class="row ">
+              <div class="col-sm-12"><h3 style="text-align: center;">clock<a  href="iframe/clock.html" target="_blank" >(HTML)</a></h3><img src="pic/dailyui/daily10.jpg" class="logo img-responsive wow fadeIn"></div>
               <div class="col-sm-12"><h3 style="text-align: center;">calculator<a  data-toggle="modal" data-target="#calculator">(HTML)</a></h3><img src="pic/dailyui/daily07.jpg" class="logo img-responsive wow fadeIn"></div>
                <div class="col-sm-12"><h3 style="text-align: center;">Login<a  data-toggle="modal" data-target="#login">(HTML)</a></h3><img src="pic/dailyui/daily08.jpg" class="logo img-responsive wow fadeIn"></div>
                 <div class="col-sm-12"><h3 style="text-align: center;">Loading<a data-toggle="modal" data-target="#loading">(HTML)</a></h3><img src="pic/dailyui/daily09.jpg" class="logo img-responsive wow fadeIn"></div>
