--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <li  id="menu05"  data-toggle="tab" ><a data-toggle="collapse" data-target="#demo"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">Product Design</a>
           <ul id="demo" class="collapse nav  nav-stacked" >
             <li><a data-toggle="tab" href="#menu6">Guide Bricks</a></li>
-            <li ><a data-toggle="tab" href="#menu7">Ming Dynasty Chair</a></li>
+            <li id="product02" ><a data-toggle="tab" href="#menu7">Ming Dynasty Chair</a></li>
             <li><a data-toggle="tab" href="#menu8">Viewex</a></li>
             <li><a data-toggle="tab" href="#menu9">Guide Brick</a></li>
           </ul>
