--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
     }); 
 
   $(document).ready(function(){
+    $("#illustration").click(function(){
+        $("#menu4").load('/ajax/illustration.txt');
+    });
+
     $("#product01").click(function(){
         $("#menu6").load('/ajax/product01.txt');
     });
@@ -87,7 +91,7 @@
         <li id="menu01"><a data-toggle="tab" href="#menu1"><img src="pic/icon/icon_16_ui.png" class="menu-icon">Logo & CI</a></li>
         <li id="menu02"><a data-toggle="tab" href="#menu2"><img src="pic/icon/icon_16_id.png" class="menu-icon">Daily UI </a></li>
         <li id="menu03"><a data-toggle="tab" href="#menu3"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">SVG</a></li>
-        <li id="menu04"><a data-toggle="tab" href="#menu4"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">Illustration</a></li>
+        <li id="illustration"><a data-toggle="tab" href="#menu4"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">Illustration</a></li>
         <li  id="menu05"  data-toggle="tab" ><a data-toggle="collapse" data-target="#demo"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">Product Design</a>
           <ul id="demo" class="collapse nav  nav-stacked" >
             <li id="product01"><a data-toggle="tab" href="#menu6">Guide Bricks</a></li>
@@ -544,38 +548,8 @@
 
 
           </div><!--=============Page03 end====================-->
-          <div id="menu4" class="tab-pane fade"><!--=============Page04 start====================-->
-          <h1>illustration</h1>
-              <div class="row" >
-                <div class="col-sm-3"><img src="pic/illu/illu01.png" class="wow fadeIn  img-responsive"></div>
-                <div class="col-sm-3"><img src="pic/illu/illu02.png" class="wow fadeIn  img-responsive"></div>
-                <div class="col-sm-3"><img src="pic/illu/illu03.png" class="wow fadeIn  img-responsive"></div>
-                <div class="col-sm-3"><img src="pic/illu/illu04.png" class="wow fadeIn  img-responsive"></div>
-              </div>
-              <div class="row" >
-                <div class="col-sm-3"><img src="pic/illu/illu05.png" class="wow fadeIn  img-responsive"></div>
-                <div class="col-sm-3"><img src="pic/illu/illu06.png" class="wow fadeIn  img-responsive"></div>
-                <div class="col-sm-3"><img src="pic/illu/illu07.png" class="wow fadeIn  img-responsive"></div>
-                <div class="col-sm-3"><img src="pic/illu/illu08.png" class="wow fadeIn  img-responsive"></div>
-              </div>
-              <div class="row" >
-                <div class="col-sm-3"><img src="pic/illu/illu09.png" class="wow fadeIn  img-responsive"></div>
-                <div class="col-sm-3"><img src="pic/illu/illu10.png" class="wow fadeIn  img-responsive"></div>
-                <div class="col-sm-3"><img src="pic/illu/illu11.png" class="wow fadeIn  img-responsive"></div>
-                <div class="col-sm-3"><img src="pic/illu/illu12.png" class="wow fadeIn  img-responsive"></div>
-              </div>
-              <div class="row" >
-                <div class="col-sm-3"><img src="pic/illu/illu13.png" class="wow fadeIn  img-responsive"></div>
-                <div class="col-sm-3"><img src="pic/illu/illu14.png" class="wow fadeIn  img-responsive"></div>
-                <div class="col-sm-3"><img src="pic/illu/illu15.png" class="wow fadeIn  img-responsive"></div>
-                <div class="col-sm-3"><img src="pic/illu/illu16.png" class="wow fadeIn  img-responsive"></div>
-              </div>
-              <div class="row" >
-                <div class="col-sm-3"><img src="pic/illu/illu17.png" class="wow fadeIn  img-responsive"></div>
-                <div class="col-sm-3"><img src="pic/illu/illu18.png" class="wow fadeIn  img-responsive"></div>
-                <div class="col-sm-3"><img src="pic/illu/illu19.png" class="wow fadeIn  img-responsive"></div>
-                <div class="col-sm-3"><img src="pic/illu/illu20.png" class="wow fadeIn  img-responsive"></div>
-              </div>
+          <div id="menu4" class="tab-pane fade"><!--=============Page04 illustration start====================-->
+          
               
           </div><!--=============Page04 end====================-->
           <div id="menu5" class="tab-pane fade"><!--=============Page05 start====================-->
