--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         $("#menu6").load('/ajax/product01.txt');
     });
     $("#product02").click(function(){
-        $("#menu7").load('/ajax/product02.txt');
+        $("#menu7").load('/ajax/product02.txt').fadeIn();
     });
   });
 
@@ -549,8 +549,6 @@
 
           </div><!--=============Page03 end====================-->
           <div id="menu4" class="tab-pane fade"><!--=============Page04 illustration start====================-->
-          
-              
           </div><!--=============Page04 end====================-->
           <div id="menu5" class="tab-pane fade"><!--=============Page05 start====================-->
           <h1>Product Design</h1>
