--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         $("#menu6").load('/ajax/product01.txt');
     });
     $("#product02").click(function(){
-        $("#menu7").load('/ajax/product02.txt').fadeIn();
+        $("#menu7").load('/ajax/product02.txt');
     });
   });
 
@@ -97,7 +97,7 @@
             <li id="product01"><a data-toggle="tab" href="#menu6">Guide Bricks</a></li>
             <li id="product02" ><a data-toggle="tab" href="#menu7">Ming Dynasty Chair</a></li>
             <li><a data-toggle="tab" href="#menu8">Viewex</a></li>
-            <li><a data-toggle="tab" href="#menu9">Guide Brick</a></li>
+            <li><a data-toggle="tab" href="#menu9">light</a></li>
           </ul>
         </li>
     </ul>
@@ -592,7 +592,33 @@
                 <div class="col-sm-8"><img src="pic/product/03-1.jpg" class="wow fadeIn  img-responsive"></div>
                 <div class="col-sm-2"></div>
             </div>
-            </div><!--=============Page08 end====================-->     
+            </div><!--=============Page08 end====================-->
+            <div id="menu9" class="tab-pane fade"><!--=============Page09 start====================-->
+              <div class="row text-center" style="background-image:url('pic/product/04.jpg'); background-size:100% auto ;background-repeat: no-repeat;">
+                 <h1 style="margin-top:10%;"></h1>
+                  <p></p>
+              </div>
+              <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8"><img src="pic/product/04-1.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto"></div>
+                <div class="col-sm-2"></div>
+              </div>
+              <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8"><img src="pic/product/04-2.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto"></div>
+                <div class="col-sm-2"></div>
+              </div>
+               <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8"><img src="pic/product/04-3.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto"></div>
+                <div class="col-sm-2"></div>
+              </div>
+               <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8"><img src="pic/product/04-4.jpg" class="wow fadeIn  img-responsive" style="margin:0 auto"></div>
+                <div class="col-sm-2"></div>
+              </div>
+          </div><!--=============Page09 end====================-->       
         </div>
       </div>
   </div>
