--- a/index.html
+++ b/index.html
@@ -599,15 +599,52 @@
           <div id="menu7" class="tab-pane fade"><!--=============Page07 start====================-->
           </div><!--=============Page07 end====================--> 
             <div id="menu8" class="tab-pane fade"><!--=============Page08 start====================-->
-                <div class="row text-center" style="background-image:url('pic/product/02.jpg'); background-size:100% auto ;background-repeat: no-repeat;">
-                <h1 style="margin-top:10%;">Ming Dynasty Chair</h1>
-                <p>Leading people out of darkness</p>
+                <div class="row text-center" style="background-image:url('pic/product/03.jpg'); background-size:100% auto ;background-repeat: no-repeat;">
+                <h1 style="margin-top:10%;">Your vision, My sight </h1>
+                <p>Exchange our world</p>
             </div>
             <div class="row" >
                 <div class="col-sm-2"></div>
-                <div class="col-sm-8"><img src="pic/product/03-1.jpg" class="wow fadeIn  img-responsive"></div>
+                <div class="col-sm-8"><img src="pic/product/03-1.jpg" class="wow fadeIn  img-responsive">
+                <p class="text-center">成人與小孩的身高不同，所看見的視野也就不同。若我們站在巨人的肩膀上，世界將有所不同。</p>
+                <p class="text-center">大人と子供の身長は同じではありません,もし私が巨人の肩に乗って視界も異なっています。</p>
+                </div>
                 <div class="col-sm-2"></div>
             </div>
+            <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8"><img src="pic/product/03-2.jpg" class="wow fadeIn  img-responsive">
+                <p class="text-center">成人與小孩的身高不同，所看見的視野也就不同。若我們站在巨人的肩膀上，世界將有所不同。</p>
+                <p class="text-center">大人と子供の身長は同じではありません,もし私が巨人の肩に乗って視界も異なっています。</p>
+                </div>
+                <div class="col-sm-2"></div>
+            </div>
+            <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8"><img src="pic/product/03-3.jpg" class="wow fadeIn  img-responsive">
+                <p class="text-center">成人與小孩的身高不同，所看見的視野也就不同。若我們站在巨人的肩膀上，世界將有所不同。</p>
+                <p class="text-center">大人と子供の身長は同じではありません,もし私が巨人の肩に乗って視界も異なっています。</p>
+                </div>
+                <div class="col-sm-2"></div>
+            </div>
+
+            <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8"><img src="pic/product/03-4.jpg" class="wow fadeIn  img-responsive">
+                <p class="text-center">成人與小孩的身高不同，所看見的視野也就不同。若我們站在巨人的肩膀上，世界將有所不同。</p>
+                <p class="text-center">大人と子供の身長は同じではありません,もし私が巨人の肩に乗って視界も異なっています。</p>
+                </div>
+                <div class="col-sm-2"></div>
+            </div>
+            <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8"><img src="pic/product/03-5.jpg" class="wow fadeIn  img-responsive">
+                <p class="text-center">成人與小孩的身高不同，所看見的視野也就不同。若我們站在巨人的肩膀上，世界將有所不同。</p>
+                <p class="text-center">大人と子供の身長は同じではありません,もし私が巨人の肩に乗って視界も異なっています。</p>
+                </div>
+                <div class="col-sm-2"></div>
+            </div>
+
             </div><!--=============Page08 end====================-->
             <div id="menu9" class="tab-pane fade"><!--=============Page09 start====================-->
               <div class="row text-center" style="background-image:url('pic/product/04.jpg'); background-size:100% auto ;background-repeat: no-repeat;">
