--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <ul id="demo2" class="collapse nav  nav-stacked" >
             <li id="product01"><a data-toggle="tab" href="#menu6">Guide Bricks</a></li>
             <li id="product02" ><a data-toggle="tab" href="#menu7">Ming Dynasty Chair</a></li>
-            <li><a data-toggle="tab" href="#menu8">Viewex</a></li>
+            <li><a data-toggle="tab" href="#menu8">Your Vision, My Sight</a></li>
             <li><a data-toggle="tab" href="#menu9">light</a></li>
           </ul>
         </li>
