--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
         <li id="menu02"><a data-toggle="tab" href="#menu2"><img src="pic/icon/icon_16_id.png" class="menu-icon">Daily UI </a></li>
         <li id="menu03"><a data-toggle="tab" href="#menu3"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">SVG</a></li>
         <li id="illustration"><a data-toggle="tab" href="#menu4"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">Illustration</a></li>
+        <li  id="menu06"  data-toggle="tab" ><a data-toggle="collapse" data-target="#ui"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">ui</a>
+          <ul id="ui" class="collapse nav  nav-stacked" >
+            <li id="ui01"><a data-toggle="tab" href="#ui-1">Guide Bricks</a></li>
+            <li id="ui02" ><a data-toggle="tab" href="#ui-2">Ming Dynasty Chair</a></li>
+            <li><a data-toggle="tab" href="#ui-3">Your Vision, My Sight</a></li>
+            <li><a data-toggle="tab" href="#ui-4">light</a></li>
+          </ul>
+        </li>
+
         <li  id="menu05"  data-toggle="tab" ><a data-toggle="collapse" data-target="#demo2"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">Product Design</a>
           <ul id="demo2" class="collapse nav  nav-stacked" >
             <li id="product01"><a data-toggle="tab" href="#menu6">Guide Bricks</a></li>
@@ -108,6 +117,14 @@
         <li id="menu02"><a data-toggle="tab" href="#menu2"><img src="pic/icon/icon_16_id.png" class="menu-icon">Daily UI </a></li>
         <li id="menu03"><a data-toggle="tab" href="#menu3"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">SVG</a></li>
         <li id="illustration"><a data-toggle="tab" href="#menu4"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">Illustration</a></li>
+        <li  id="menu06"  data-toggle="tab" ><a data-toggle="collapse" data-target="#ui-left"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">ui</a>
+          <ul id="ui-left" class="collapse nav  nav-stacked" >
+            <li id="ui01"><a data-toggle="tab" href="#ui-1">Licensing Flow</a></li>
+            <li id="ui02" ><a data-toggle="tab" href="#ui-2">Ming Dynasty Chair</a></li>
+            <li><a data-toggle="tab" href="#ui-3">Your Vision, My Sight</a></li>
+            <li><a data-toggle="tab" href="#ui-4">light</a></li>
+          </ul>
+        </li>
         <li  id="menu05"  data-toggle="tab" ><a data-toggle="collapse" data-target="#demo"><img src="pic/icon/icon_16_mail_w.png" class="menu-icon">Product Design</a>
           <ul id="demo" class="collapse nav  nav-stacked" >
             <li id="product01"><a data-toggle="tab" href="#menu6">Guide Bricks</a></li>
@@ -591,9 +608,44 @@
                 <div class="col-sm-3"><img src="pic/illu/illu18.png" class="wow fadeIn  img-responsive"></div>
                 <div class="col-sm-3"><img src="pic/illu/illu19.png" class="wow fadeIn  img-responsive"></div>
                 <div class="col-sm-3"><img src="pic/illu/illu20.png" class="wow fadeIn  img-responsive"></div>
-              </div>
-              
+              </div>  
           </div><!--=============Page05 end====================-->
+
+          <div id="ui-1" class="tab-pane fade"><!--=============ui01 start====================-->
+              <div class="row text-center" >
+                <h1 style="margin-top:10%;">Licensing Flow</h1>
+                <p>軟體授權流程規劃</p>
+              </div>
+              <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8">
+                  <div class="col-sm-12"><img src="pic/ui/licensing/licensing01.png" class="wow fadeIn  img-responsive"></div>
+                  <div class="col-sm-12"><img src="pic/ui/licensing/licensing02.png" class="wow fadeIn  img-responsive"></div>
+                  <div class="col-sm-12"><img src="pic/ui/licensing/licensing03.png" class="wow fadeIn  img-responsive"></div>
+                  <div class="col-sm-12"><img src="pic/ui/licensing/licensing04.png" class="wow fadeIn  img-responsive"></div>
+                  <div class="col-sm-12"><img src="pic/ui/licensing/licensing05.png" class="wow fadeIn  img-responsive"></div>
+                  <div class="col-sm-12"><img src="pic/ui/licensing/licensing06.png" class="wow fadeIn  img-responsive"></div>
+                </div>
+                <div class="col-sm-2"></div>
+            </div>
+          </div><!--=============ui01 end====================-->
+          <div id="ui-2" class="tab-pane fade"><!--=============ui02 start====================-->
+              <div class="row text-center" >
+                <h1 style="margin-top:10%;">Web App Mockup</h1>
+                <p>Using Balsamiq</p>
+                <div  class="btn btn-default " target="_blank"><a href="pic/ui/mockup/mockup.pdf">Download PDF</a></div>
+              </div>
+              <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8">
+                  <div class="col-sm-12"><img src="pic/ui/mockup/img94.jpg" class="wow fadeIn  img-responsive"></div><hr>
+                  <div class="col-sm-12"><img src="pic/ui/mockup/img97.jpg" class="wow fadeIn  img-responsive"></div><hr>
+                  <div class="col-sm-12"><img src="pic/ui/mockup/img114.jpg" class="wow fadeIn  img-responsive"></div>
+                </div>
+                <div class="col-sm-2"></div>
+            </div>
+          </div><!--=============ui02 end====================-->    
+
           <div id="menu6" class="tab-pane fade"><!--=============Page06 start====================-->
           </div><!--=============Page06 end====================-->  
           <div id="menu7" class="tab-pane fade"><!--=============Page07 start====================-->
