--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
               <div class="row text-center" >
                 <h1 style="margin-top:10%;">Web App Mockup</h1>
                 <p>Using Balsamiq</p>
-                <div  class="btn btn-default " target="_blank"><a href="pic/ui/mockup/mockup.pdf">Download PDF</a></div>
+                <div  class="btn btn-default " ><a href="pic/ui/mockup/mockup.pdf" target="_blank" >Download PDF</a></div>
               </div>
               <div class="row" >
                 <div class="col-sm-2"></div>
